app/styles/module/_todo-list.scss
.todo-list {
	@extend .clearfix;
	padding: 0;
	margin: 0;

	.sidebar-open & {
		overflow: hidden;
	}

	li {
		position: relative;
		font-size: emCalc(14px);
		list-style: none;
	}

	ol.tasks {
		padding: 0;
	}
}

.list-fade {
	z-index: 9999;

	position: fixed;
	bottom: 0; left: 0; right: 0;

	.edit-mode & { display: none !important; }

	.sidebar-open & {
		left: $sidebar-width;
		@include breakpoint(desktop) { left: $sidebar-width-big; }
	}

	pointer-events: none;

	height: 5em;
	@include breakpoint(min-height, emCalc(900px)) {
		height: 7em;
	}

	@include background-image( linear-gradient( rgba(white, 0), white ) );
}

.action-bar:not(.fadeout) + .list-fade {
	@include background-image( linear-gradient( rgba(white, 0), white 35% ) );
}

